<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- <Button
        android:id="@+id/btn_scan_barcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/open_camera" /> -->
    
    <!-- <Button
        android:id="@+id/btn_open_barcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_image" /> -->
        
    <Button
    android:id="@+id/btn_scan_barcode"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/scan_barcode" />
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView 
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/scan_result" />
        
        <TextView 
        android:id="@+id/tv_scan_result"
       	android:layout_width="fill_parent"
       	android:textSize="18sp"
       	android:textColor="@android:color/black"
       	android:autoLink="all"
        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <!-- <EditText 
        android:id="@+id/et_qr_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/input_hint"/> -->
        
    <com.tiny.qrcode.ClearEditText  
        android:id="@+id/et_qr_string"  
        android:layout_width="fill_parent"  
        android:layout_marginTop="30dp"
        android:singleLine="true"  
        android:drawableRight="@drawable/delete_selector"  
        android:hint="@string/input_hint"
        android:layout_height="wrap_content" >
    </com.tiny.qrcode.ClearEditText>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    	<Button
        	android:id="@+id/btn_add_qrcode"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/generate" />
    	
    	<Button
        	android:id="@+id/btn_embed_logo"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/embed_logo" />
    
    	<Button
        	android:id="@+id/btn_save_qrcode"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/save" />
    	
    	<Button
        	android:id="@+id/btn_share_qrcode"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/share" />
        <!--
             <Button
        	android:id="@+id/btn_more"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/more" />
        -->

    </LinearLayout>
    
    <ImageView 
        android:id="@+id/iv_qr_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
    

</LinearLayout>